# youthsportsbudget

./: .gitignore  BACKEND_CONNECTION.md  BACKEND_SETUP.md  DEPLOYMENT.md  DEPLOY_INSTRUCTIONS.txt  FIX_SEASON_CREATE.md  GITHUB_SETUP.md  RAILPACK_FIX.md  RAILWAY_ERROR_FIX.md  RAILWAY_EXACT_STEPS.md  RAILWAY_FIX.md  RAILWAY_QUICK_FIX.txt  README.md  README_DEPLOY.md  SETUP.md  TROUBLESHOOTING.md  netlify.toml
backend/: Dockerfile  RAILWAY_SETUP.md  README_RAILWAY.md  build.sh  nixpacks.toml  pyproject.toml  railway.json  requirements.in  requirements.txt  setup.py  start.sh  test_railway.py
backend/app/: database.py  db_init.py  main.py  models.py  schemas.py  startup.py
backend/app/api/v1/: auth.py  budgets.py  expenses.py  imports.py  organizations.py  quick_actions.py  revenues.py  seasons.py  teams.py  transparency.py
backend/app/core/: dependencies.py  security.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: HowToGuide.tsx  Navigation.tsx  RecentActivity.tsx
frontend/src/pages/: Budgets.tsx  Dashboard.tsx  Expenses.tsx  Import.tsx  Login.tsx  QuickActions.tsx  Reports.tsx  Revenues.tsx  Seasons.tsx  Teams.tsx  Transparency.tsx
frontend/src/services/: api.ts
frontend/src/store/: authStore.ts
frontend/src/types/: index.ts
